--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 </head>
 
 <body>
-<header></header>
+<header class="valign-wrapper teal lighten-1 white-text">
+    <div>
+        <h1 class="flow-text"><i class="material-icons">account_circle</i>Easy #Hashtagger</h1>
+    </div>
+</header>
 
 <!-- Collapse -->
  <div class="container">
