--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!--Link to Materialize-->
     <script type="text/javascript" src="materialize.js"></script>
 
+    <link rel="shortcut icon" href="https://github.com/AndrewHempfling/easyhashtagger/blob/master/favicon.ico"/>
+	
     <!--script type="text/javascript" src="./materialize/js/materialize.js"></script-->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
