--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Link to Materialize-->
     <script type="text/javascript" src="materialize.js"></script>
 
-     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	
     <!--script type="text/javascript" src="./materialize/js/materialize.js"></script-->
     <!--Let browser know website is optimized for mobile-->
