--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Hashtag Generator</title>
+<title>Easy Hashtagger</title>
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -12,9 +13,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
     <!--Link to Materialize-->
     <script type="text/javascript" src="materialize.js"></script>
-
-     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-	
     <!--script type="text/javascript" src="./materialize/js/materialize.js"></script-->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
